CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(VKPT-CORE)

SET(Target vkpt-core)

FILE(GLOB_RECURSE SRC
		"${PROJECT_SOURCE_DIR}/src/*.cpp"
		"${PROJECT_SOURCE_DIR}/inc/vkpt/*.h"
		"${PROJECT_SOURCE_DIR}/inc/vkpt/*.inl")

ADD_EXECUTABLE(${Target} ${SRC})

FOREACH(_SRC IN ITEMS ${SRC})
    GET_FILENAME_COMPONENT(SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/inc/vkpt" "inc" _GRP_PATH "${SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET_PROPERTY(TARGET ${Target} PROPERTY CXX_STANDARD 20)
SET_PROPERTY(TARGET ${Target} PROPERTY CXX_STANDARD_REQUIRED ON)
	
TARGET_COMPILE_DEFINITIONS(${Target} PUBLIC GLFW_INCLUDE_VULKAN)
TARGET_COMPILE_DEFINITIONS(${Target} PUBLIC VULKAN_HPP_DISPATCH_LOADER_DYNAMIC)
TARGET_COMPILE_DEFINITIONS(${Target} PUBLIC VULKAN_HPP_NO_STRUCT_CONSTRUCTORS)

TARGET_INCLUDE_DIRECTORIES(${Target} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/inc")

TARGET_LINK_LIBRARIES(${Target} PUBLIC
    AGZUtils glfw Vulkan::Vulkan shaderc vk-bootstrap::vk-bootstrap vma)
