CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(VKPT-CORE)

SET(TargetName vkpt-core)

FILE(GLOB_RECURSE SRC
		"${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/inc/vkpt/*.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/inc/vkpt/*.inl")

ADD_LIBRARY(${TargetName} STATIC ${SRC})

FOREACH(_SRC IN ITEMS ${SRC})
    GET_FILENAME_COMPONENT(SRC "${_SRC}" PATH)
    STRING(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}/inc/vkpt" "inc" _GRP_PATH "${SRC}")
    STRING(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}/src" "src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

IF(MSVC AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 19.29.30129 AND CMAKE_VERSION VERSION_GREATER 3.20.3)
    SET_PROPERTY(TARGET ${TargetName} PROPERTY CXX_STANDARD 23)
ELSE()
    SET_PROPERTY(TARGET ${TargetName} PROPERTY CXX_STANDARD 20)
ENDIF()

TARGET_COMPILE_DEFINITIONS(${TargetName} PUBLIC GLFW_INCLUDE_VULKAN)
TARGET_COMPILE_DEFINITIONS(${TargetName} PUBLIC VULKAN_HPP_DISPATCH_LOADER_DYNAMIC)
TARGET_COMPILE_DEFINITIONS(${TargetName} PUBLIC VULKAN_HPP_NO_STRUCT_CONSTRUCTORS)

TARGET_INCLUDE_DIRECTORIES(${TargetName} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/inc")

TARGET_LINK_LIBRARIES(${TargetName} PUBLIC
    AGZUtils ImGui glfw Vulkan::Vulkan shaderc vk-bootstrap::vk-bootstrap vma)
