CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(VKPT-01-DEFERRED)

SET(TargetName 01.deferred)

ADD_EXECUTABLE(${TargetName} "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")

IF(MSVC AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 19.29.30129 AND CMAKE_VERSION VERSION_GREATER 3.20.3)
    SET_PROPERTY(TARGET ${TargetName} PROPERTY CXX_STANDARD 23)
ELSE()
    SET_PROPERTY(TARGET ${TargetName} PROPERTY CXX_STANDARD 20)
ENDIF()

TARGET_LINK_LIBRARIES(${TargetName} PUBLIC vkpt-core)

IF(MSVC)
    SET_PROPERTY(
        TARGET ${TargetName}
        PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../..")
ENDIF()
